# cli-bumpversion-example

./: .bumpversion.cfg  .cz.toml  .gitignore  .pypirc  CHANGELOG.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-app.yml
docs/source/: conf.py  hello.greeting.rst  hello.rst  hello.tests.rst  index.rst  readme.rst
hello/: __init__.py  hello.py
hello/greeting/: greeting.py
hello/lib/: deprecated.py
hello/tests/: conftest.py  test_command_greeting.py
